deploy/internal/apps/geopulse/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geopulse-ui
  labels:
    app: geopulse-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geopulse-ui
  template:
    metadata:
      labels:
        app: geopulse-ui
    spec:
      containers:
        - name: geopulse-ui
          image: tess1o/geopulse-ui:1.39.0
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
