deploy/internal/apps/geopulse/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geopulse-ui
  labels:
    app: geopulse-ui
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: geopulse-ui
